# conan_multi_layout

./: build.sh  exe_build.sh
MyMultiExe/: CMakeLists.txt  conanfile.py
MyMultiExe/src/: MyApplication.cpp  MyApplication.h
MyPackage/: CMakeLists.txt  conanfile.py
MyPackage/LibA/: CMakeLists.txt  Config.h.in
MyPackage/LibA/include/MyPackage/: LibASystem.h
MyPackage/LibA/src/: LibASystem.cpp
MyPackage/LibB/: CMakeLists.txt
MyPackage/LibB/include/: LibB.h
MyPackage/LibB/include/MyPackage/: LibBSystem.h
MyPackage/LibB/src/: LibB.cpp  LibBSystem.cpp
MyPackage/LibC/: CMakeLists.txt
MyPackage/LibC/include/: LibC.h
MyPackage/LibC/include/MyPackage/: LibCSystem.h
MyPackage/LibC/src/: LibC.cpp  LibCSystem.cpp
MyPackage/cmake/: MyConan.cmake
